@@ -39,15 +39,19 @@ int hiprtc_init (void *hashcat_ctx)
   memset (hiprtc, 0, sizeof (HIPRTC_PTR));
 
   #if   defined (_WIN)
-  hiprtc->lib = hc_dlopen ("amdhip64.dll");
+  hiprtc->lib = hc_dlopen ("hiprtc.dll");
+
+  if (hiprtc->lib == NULL) hiprtc->lib = hc_dlopen ("contrib/bin/win64/hiprtc0503.dll");
+  if (hiprtc->lib == NULL) hiprtc->lib = hc_dlopen ("amdhip64.dll");
   #elif defined (__APPLE__)
   hiprtc->lib = hc_dlopen ("fixme.dylib");
   #elif defined (__CYGWIN__)
-  hiprtc->lib = hc_dlopen ("amdhip64.dll");
-  #else
-  hiprtc->lib = hc_dlopen ("libamdhip64.so");
+  hiprtc->lib = hc_dlopen ("hiprtc.dll");
 
-  if (hiprtc->lib == NULL) hiprtc->lib = hc_dlopen ("libamdhip64.so.4");
+  if (hiprtc->lib == NULL) hiprtc->lib = hc_dlopen ("contrib/bin/win64/hiprtc0503.dll");
+  if (hiprtc->lib == NULL) hiprtc->lib = hc_dlopen ("amdhip64.dll");
+  #else
+  hiprtc->lib = hc_dlopen ("libhiprtc.so");
   #endif
 
   if (hiprtc->lib == NULL) return -1;
